--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     }
   ],
   "require": {
-    "craftcms/cms": "^3.1.0"
+    "craftcms/cms": "^3.1.0",
+    "php": "^8.0.2"
   },
   "support": {
     "issues": "https://github.com/ttempleton/craft-category-groups-field/issues",
@@ -34,5 +35,16 @@
     "class": "ttempleton\\categorygroupsfield\\Plugin",
     "changelogUrl": "https://github.com/ttempleton/craft-category-groups-field/blob/main/CHANGELOG.md",
     "downloadUrl": "https://github.com/ttempleton/craft-category-groups-field/archive/main.zip"
+  },
+  "config": {
+    "allow-plugins": {
+      "yiisoft/yii2-composer": true,
+      "craftcms/plugin-installer": true
+    }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "require-dev": {
+    "craftcms/rector": "dev-main"
   }
 }
