--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     }
   ],
   "require": {
-    "craftcms/cms": "^3.1.0",
+    "craftcms/cms": "^4.0.0-beta.1",
     "php": "^8.0.2"
   },
   "support": {
