--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "ttempleton/craft-category-groups-field",
   "description": "A Craft CMS field type for selecting category groups",
-  "version": "1.3.0",
+  "version": "2.0.0-beta.1",
   "type": "craft-plugin",
   "keywords": [
     "cms",
