--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
     }
   ],
   "require": {
-    "craftcms/cms": "^4.5.0",
-    "php": "^8.0.2"
+    "craftcms/cms": "^5.0.0"
   },
   "support": {
     "issues": "https://github.com/ttempleton/craft-category-groups-field/issues",
